--- a/data/config/config.ini
+++ b/data/config/config.ini
@@ -27,6 +27,7 @@ MC_APP_INFO_FEATURE = "http://eu1.mapcentia.com/apps/viewer/servers/query/"
 GP_TITLE = "GeoPod - My Portal" ;change me
 GP_LABEL = "My personal text" ;change me
 GP_LOGO = "img/Bonvillars.png" ;change me
+GP_COPYRIGHT = "Copyright bla bla"
 GP_LAT = "46.838341956715475"
 GP_LON = "6.670728921886878"
 GP_ZOOM = "16"
